--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,7 +12,20 @@ body {
     padding: 3rem 1.5rem;
     text-align: center;
 }
+.container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+}
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 30px;
+    background-color: #f5f5f5;
+}
 .navbar {
     border-bottom:1px solid #eee;
 }
