Added some pages

--- a/src/partials/main_menu.html
+++ b/src/partials/main_menu.html
@@ -7,7 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="prospective.html">Prospective Students</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="current.html">Current Students</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="alumni.html">Alumni</a>
             </li>
         </ul>
     </div>
